Refactor guide_homepage as category_page

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -22,8 +22,8 @@ layout: bootstrap
               {% endif %}
               <li><a href="{{ site.baseurl }}/guides/{{ sdk_url }}">{{ sdk }}</a></li>
 
-              {% if page.guide_homepage %}
-                <li class="active"><a href="{{ site.baseurl }}/{{ page.guide_homepage }}">{{ page.categories }}</a></li>
+              {% if page.category_page %}
+                <li class="active"><a href="{{ site.baseurl }}/{{ page.category_page }}">{{ page.categories }}</a></li>
               {% else %}
                 {% if page.categories[0] != page.sdk[0] %}
                   <li class="active">{{ page.categories }}</li>
