--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,4 +79,7 @@
   <!-- For Chrome for Android: -->
   <link rel="icon" sizes="192x192" href="images/touch-icon-192x192.png">
 
+  <!-- Diable crawling until this version is the stable version -->
+  <meta name="robots" content="noindex" />
+
 </head>
