--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,5 +80,5 @@
   <link rel="icon" sizes="192x192" href="images/touch-icon-192x192.png">
 
   <!-- Diable crawling until this version is the stable version -->
-  <meta name="robots" content="noindex" />
+  <!--<meta name="robots" content="noindex" />-->
 </head>
