Temporarily disable broken link checking on version banner

--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -38,6 +38,7 @@
 </div>
 
 <!-- Check the version banner for broken links and remove the link if found -->
+<!-- this is not currently working as intended, so I'm disabling it until I can figure it out
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>
 $(document).ready(function()
@@ -52,4 +53,4 @@ $(document).ready(function()
     $aTag.attr("href", "/");
   });
 });
-</script>
+</script>-->
