Cosmetic change to backlink url

--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -26,7 +26,7 @@
           Hey, you're viewing the older <strong>Rhino {{ site.git_branch | upcase }}</strong> version of this page! <a href="{{site.baseurl_orig}}{{ page.url }}">View the <strong>Rhino {{ site.versions.stable | upcase }}</strong> version instead.</a>
         {% endif %}
         {% if current == stable %}
-          <strong>NEW:</strong> Welcome to the new <strong>Rhino {{ site.git_branch | upcase }}</strong> version of this page! <a href="{{site.baseurl_orig}}/{{ current | minus: 1 }}/{{ page.url }}">Looking for the older Rhino {{ current | minus: 1 }} version?</a>
+          <strong>NEW:</strong> Welcome to the new <strong>Rhino {{ site.git_branch | upcase }}</strong> version of this page! <a href="{{site.baseurl_orig}}/{{ current | minus: 1 }}{{ page.url }}">Looking for the older Rhino {{ current | minus: 1 }} version?</a>
         {% endif %}
         {% if current > stable %}
           Hey, you're viewing the <strong>Rhino {{ site.git_branch | upcase }}</strong> version of this page! <a href="{{site.baseurl_orig}}{{ page.url }}">View the current version instead.</a>
