Experiment with linear stripes on version-banner

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -313,9 +313,35 @@
   font-style: italic;
 }
 
+.version-banner-warning {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1000000;
+  text-align: center;
+  background-color: #424242;
+  padding: 5px;
+  color: white;
+  font-style: italic;
+
+  background: repeating-linear-gradient(
+    -55deg,
+    #222,
+    #222 10px,
+    #333 10px,
+    #333 20px
+  );
+}
+
 .version-banner a,
 .version-banner a:hover,
 .version-banner a:visited {
+  color: lighten($brand-color, 25%);
+}
+
+.version-banner-warning a,
+.version-banner-warning a:hover,
+.version-banner-warning a:visited {
   color: lighten($brand-color, 25%);
 }
 
