Add a bit more padding to the mobile layout
Version banner is now longer/more likely to wrap onto 2/3 lines.

(cherry picked from commit 734f9366363456a9e05ceea128e355618a04a2d4)

--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -20,7 +20,7 @@
 {% if current == stable %}
   <div class="version-banner">
 {% else %}
-  <div class="version-banner-warning">
+  <div class="version-banner version-banner-warning">
 {% endif %}
     {% if site.git_branch == "master" %}
       <strong>WARNING:</strong> You're viewing the <strong>Rhino WIP</strong> version of this page! <a href="{{site.baseurl_orig}}{{ page.url }}">View the current version instead.</a>
