Redirect mac/win rss docs to undecorated url
Also fixes headings disappearing behind the version banner

NOTE: url fragments not being preserved, yet
Maybe https://github.com/jekyll/jekyll-redirect-from/pull/127/files can
help...

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -353,7 +353,8 @@ $banner-wraps: 730px; // screen width below which version banner text will wrap
   h3[id]:before,
   h4[id]:before,
   h5[id]:before,
-  h6[id]:before {
+  h6[id]:before,
+  div[id]:before {
     display: block;
     content: "";
     margin-top: -36px;
