--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,10 +33,9 @@
             <!-- Google CSE Search Box Begins  -->
             <!-- Use of this code assumes agreement with the Google Custom Search Terms of Service. -->
             <!-- The terms of service are available at https://www.google.com/cse/docs/tos.html -->
-            <form id="cref" action="{{ site.baseurl }}/search-results.html">
-                <input type="hidden" name="cref" value="007988927381198593803:mcq6pshqsn8" />
-                <input id="searchtext" type="text" name="q" size="24" value="" placeholder="search" />
-                <input class="searchBox" type="submit" name="sa" size="2" value=" " />
+            <form id="search-box" action="{{ site.baseurl }}/search-results.html">
+                <input id="searchtext" type="search" name="q" size="24" value="" placeholder="Search" />
+                <input class="searchBox" type="submit" size="2" value=" " />
             </form>
         <!-- Google CSE Search Box Ends -->
         </div>
