Direct users to Grasshopper landing pages. Add unfurl languages for guide landing pages. Fix broken image link for Android Chrome.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -78,7 +78,7 @@
   <!-- For iPhone 6 Plus with @3× display: -->
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ site.baseurl }}/images/apple-touch-icon-180x180-precomposed.png">
   <!-- For Chrome for Android: -->
-  <link rel="icon" sizes="192x192" href="images/touch-icon-192x192.png">
+  <link rel="icon" sizes="192x192" href="{{ site.baseurl }}/images/touch-icon-192x192.png">
 
   <!-- Diable crawling until this version is the stable version -->
   <!--<meta name="robots" content="noindex" />-->
