Test out jekyll-last-modified-at

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -33,7 +33,7 @@ layout: bootstrap
 
           <h1>{{ page.title }}</h1>
 
-          <p>{% include byline.html %}</p>
+          <p>{% include byline.html %} {{ page.last_modified_at }}</p>
 
           <p>{{ page.description }}</p>
 
