--- a/_includes/byline.html
+++ b/_includes/byline.html
@@ -13,13 +13,13 @@
         {% if i == iterator_count %}
           {% break %}
         {% endif %} and
-      {% endfor %}
+      {% endfor %}  (Last modified: {{ page.last_modified_at | date_to_string }})
     {% else %}
       {% assign check_author_contact = page.author_contacts[0] %}
       {% if check_author_contact contains '@' %}
-        by <a href="mailto:{{ page.author_contacts }}">{{ page.authors }}</a>
+        by <a href="mailto:{{ page.author_contacts }}">{{ page.authors }}</a> (Last modified: {{ page.last_modified_at | date_to_string }})
       {% else %}
-        by <a href="https://discourse.mcneel.com/users/{{ page.author_contacts }}/activity">{{ page.authors }}</a>
+        by <a href="https://discourse.mcneel.com/users/{{ page.author_contacts }}/activity">{{ page.authors }}</a> (Last modified: {{ page.last_modified_at | date_to_string }})
       {% endif %}
     {% endif %}
   </span>
