--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
             {% endif %}
           {% endif %}
         {% endfor %}
-        <a class="page-link" href="http://discourse.mcneel.com/c/rhino-developer">Forums</a>
+        <a class="page-link" href="https://discourse.mcneel.com/c/rhino-developer">Forums</a>
         <!-- Google Search Engine -->
         <!-- TODO Move to this site back into the Mcneel search, or use a simple site only search for results -->
         <div id="sitesearch">
