--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -54,6 +54,13 @@ body {
     margin-top: 25px;
 }
 
+.rdk_image_right {
+    float: right;
+    margin-right: 8px;
+    margin-top: 8px;
+    margin-left: 12px;
+}
+
 /* Search input form and search results styling */
 
 #sitesearch {
