Added additional Video embeds for Essential math

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -213,6 +213,18 @@ code {
 
 }
 
+
+/*
+##############################################################################
+## inline video player embed overides.
+##############################################################################
+*/
+
+div.video-player {
+     margin: 0px 25px 0px 25px; 
+}
+
+
 /*
 ##############################################################################
 ## Image float overrides. Allows to wrap text around images.
