reverse line change that comments out jquery in version-banner.html. original commit: e5effcc0bebb5a8bdb6f819de6fbc7f3660fdf7c. This is a quick fix to get the api/RhinoScriptSyntax search dialog working again to be follewed up by looking at jquery possibly being loaded multiple times

--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -44,7 +44,7 @@
 </div>
 
 <!-- Check the version banner for broken links and remove the link if found -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- <script>
 $(document).ready(function()
 {
