--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,6 +80,6 @@
   <!-- For Chrome for Android: -->
   <link rel="icon" sizes="192x192" href="{{ site.baseurl }}/images/touch-icon-192x192.png">
 
-  <!-- Diable crawling until this version is the stable version -->
-  <meta name="robots" content="noindex" />
+  <!-- Enable crawling because this version is the stable version -->
+  <!--<meta name="robots" content="noindex" />-->
 </head>
